clean up warnings